tests/typing/bad/testfile-return-2.c

struct S { int a; };
int f() { struct S s; return s; }
int main() { }
